# docs/swagger.json
@@ -23,6 +23,25 @@
       "post": {
         "tags": ["Auth"],
         "summary": "Register user",
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "required": ["name", "email", "password", "phone", "address", "roles"],
+                "properties": {
+                  "name": { "type": "string" },
+                  "email": { "type": "string", "format": "email" },
+                  "password": { "type": "string", "format": "password" },
+                  "phone":{"type": "string", "format": "tel"},
+                  "address":{"type": "string"},
+                  "roles":{"type": "string", "enum": ["user", "admin", "seller"]}
+                }
+              }
+            }
+          }
+        },
         "responses": {
           "201": { "description": "User registered" }
         }
@@ -32,6 +51,21 @@
       "post": {
         "tags": ["Auth"],
         "summary": "User login",
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "required": ["email", "password"],
+                "properties": {
+                  "email": { "type": "string", "format": "email" },
+                  "password": { "type": "string", "format": "password" }
+                }
+              }
+            }
+          }
+        },
         "responses": {
           "200": { "description": "Login success" }
         }
@@ -48,9 +82,23 @@
       }
     },
     "/api/auth/forgotpassword": {
-      "get": {
+      "post": {
         "tags": ["Auth"],
         "summary": "Send password reset link",
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "required": ["email"],
+                "properties": {
+                  "email": { "type": "string", "format": "email" }
+                }
+              }
+            }
+          }
+        },
         "responses": {
           "200": { "description": "Password reset link sent" }
         }
@@ -68,6 +116,23 @@
             "schema": { "type": "string" }
           }
         ],
+         "requestBody": {
+      "required": true,
+      "content": {
+        "application/json": {
+          "schema": {
+            "type": "object",
+            "required": ["newPassword"],
+            "properties": {
+              "newPassword": {
+                "type": "string",
+                "format": "password"
+              }
+            }
+          }
+        }
+      }
+    },
         "responses": {
           "200": { "description": "Password reset successful" }
         }
@@ -247,6 +312,25 @@
       "post": {
         "tags": ["Users"],
         "summary": "Add a new user",
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "required": ["name", "email", "password", "phone", "address", "roles"],
+                "properties": {
+                  "name": { "type": "string" },
+                  "email": { "type": "string", "format": "email" },
+                  "password": { "type": "string", "format": "password" },
+                  "phone":{"type": "string", "format": "tel"},
+                  "address":{"type": "string"},
+                  "roles":{"type": "string", "enum": ["user", "admin", "seller"]}
+                }
+              }
+            }
+          }
+        },
         "responses": {
           "201": { "description": "User created" }
         }
